syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package aprish.protobufs;

option go_package = "/protobufs";
// github.com/ericwq/aprish/protobufs

message Instruction {
  optional uint32 protocol_version = 1;

  optional uint64 old_num = 2;
  optional uint64 new_num = 3;
  optional uint64 ack_num = 4;
  optional uint64 throwaway_num = 5;

  optional bytes diff = 6;

  optional bytes chaff = 7;
}
